# 1

./: .gitmodules  Cargo.toml  bridge.cpp  build.rs  build_android.sh  patch_sources.sh
.cargo/: config.toml
.github/workflows/: build.yml
cpp/: patch_base.cpp  patch_kernel_root.cpp  patch_kernel_root.h
cpp/analyze/: base_func.h  init_cred_searcher.cpp  init_cred_searcher.h  kernel_version_parser.cpp
src/: bridge.rs  main.rs
