[package]
name = "patch_kernel_root"
version = "1.0.0"
edition = "2024"
description = "SKRoot Linux Kernel Root Patcher - Android ARM64"

[dependencies]
clap = { version = "4", features = ["derive"] }

[build-dependencies]
cc = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
panic = "abort"
